--- a/diary/dog.html
+++ b/diary/dog.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/colorbox.css"/>
 	<script src="jquery-1.7.1.min.js"></script>
 	<script src="jquery.colorbox.js"></script>
-	<script src="dog.js"></script>
+	<script src="scripts.js"></script>
 
 	  
     
