--- a/diary/diary.html
+++ b/diary/diary.html
@@ -29,7 +29,7 @@
 
 	</style>
 
-    <script src="js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript">
     jQuery(document).ready(function(){
         var tabmenu = $("#tabmenu>div");
