--- a/diary/rollover.html
+++ b/diary/rollover.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ex05 rollover</title>
 	<link rel="stylesheet" href="css/rollover.css"/>
-    <script src="http://code.jquery.com/jquery-1.3.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script src="js/script1.js"></script>	
 </head>
 <body>
