--- a/diary/tab2.html
+++ b/diary/tab2.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/tab.css">
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js">
-	   </script>
-    <script src="js/tab2.js"></script>
+   	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+   	<script src="js/tab2.js"></script>
 </head>
 <body>
     
