--- a/diary/imgslider.html
+++ b/diary/imgslider.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Image Slider</title>
 	<link rel="stylesheet" href="css/slide.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script src="js/imgslider.js"></script>	
 </head>
 <body>
