--- a/diary/imgslider2.html
+++ b/diary/imgslider2.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Image Slider</title>
 	<link rel="stylesheet" href="css/imgslider2.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/imgslider2.js"></script>	
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+  	<script src="js/imgslider2.js"></script>	
 </head>
 <body>
 	<h1>slideshow</h1>
