--- a/diary/accordian2.html
+++ b/diary/accordian2.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/accordian2.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/accordian2.js"></script>	
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    	<script src="js/accordian2.js"></script>	
 </head>
 <body>
 	<dl class="accordion">
