--- a/diary/guidetext2.html
+++ b/diary/guidetext2.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>guide Text</title>
 	<link rel="stylesheet" href="css/guidetext2.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/guidetext2.js"></script>	
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+   	<script src="js/guidetext2.js"></script>	
 </head>
 <body>
 	<form action="#" method="get">
