--- a/diary/animate2.html
+++ b/diary/animate2.html
@@ -5,8 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/common.css"/>
 	<link rel="stylesheet" href="css/animate2.css"/>
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/animate2.js">
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    	<script src="js/animate2.js">
   
     </script>
 </head>
