--- a/diary/animate4.html
+++ b/diary/animate4.html
@@ -5,8 +5,8 @@
 	<title>animate1</title>
 	<link rel="stylesheet" href="css/common.css"/>
 	<link rel="stylesheet" href="css/animate4.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/animate4.js"></script>	
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    	<script src="js/animate4.js"></script>	
 </head>
 <body>
 	<div class="sub_list">
