--- a/diary/animate5.html
+++ b/diary/animate5.html
@@ -5,8 +5,8 @@
 	<title>animate5</title>
 	<link rel="stylesheet" href="css/common.css"/>
 	<link rel="stylesheet" href="css/animate5.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/animate5.js"></script>	
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    	<script src="js/animate5.js"></script>	
 </head>
 <body>
 	<span class="quick_toggle"><span class="indent">퀵메뉴닫기</span></span>
