--- a/diary/stop.html
+++ b/diary/stop.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>stop</title>
 	<link rel="stylesheet" href="css/stop.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/stop.js"></script>
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    	<script src="js/stop.js"></script>
 	
 </head>
 <body>
