--- a/diary/easing.html
+++ b/diary/easing.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/easing.css"/>
-	    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
-    <script src="js/jquery-ui-1.10.3.custom.min.js" ></script>
-    <script src="js/easing.js"></script>
-    </script>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery-ui-1.10.3.custom.min.js" ></script>
+    	<script src="js/easing.js"></script>
 </head>
 <body>
 	<select>
