--- a/diary/tooltip.html
+++ b/diary/tooltip.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>tooltip</title>
 	<link rel="stylesheet" href="css/tooltip.css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/tooltip.js"></script>	
+    	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+   	<script src="js/tooltip.js"></script>	
 </head>
 <body>
 	<ul>
