--- a/diary/middle_tab2.html
+++ b/diary/middle_tab2.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/middle_tab2.css"/>
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/middle_tab2.js"></script>
+	<script src="js/jquery-1.12.4.min.js"></script>
+    	<script src="js/middle_tab2.js"></script>
 </head>
 <body>
 	<div id="wrapper">
