--- a/diary/middle_tab3.html
+++ b/diary/middle_tab3.html
@@ -5,9 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/basic.css"/>
 	<link rel="stylesheet" href="css/middle_tab3.css"/>
-
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/middle_tab3.js"></script>
+	<script src="js/jquery-1.12.4.min.js"></script>
+    	<script src="js/middle_tab3.js"></script>
 </head>
 <body>
 	<div id="wrap">
