--- a/diary/diary.html
+++ b/diary/diary.html
@@ -277,8 +277,8 @@
 					<li><a href="tooltip.html">툴팁</a></li>
 					<li><a href="tooltip2.html">툴팁2</a></li>
 					<li><a href="dog.html">링크 들어가면 개 튀어나옴</a></li>
-					<li><a href="http://dlxorb1223.dothome.co.kr/test/1/index.html">JSON</a></li>
-					<li><a href="http://dlxorb1223.dothome.co.kr/test/2/index.html">AJAX</a></li>
+					<li><a href="./test/1/index.html">JSON</a></li>
+					<li><a href="./test/2/index.html">AJAX</a></li>
 					<li><a href="div_index.html">플러그인</a></li>
 					
 					
