--- a/diary/test/2/index.html
+++ b/diary/test/2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery-1.7.1.min.js"></script>
     <script>
     jQuery(document).ready(function(){
         var container = $("#container");
