--- a/diary/test/2/index.html
+++ b/diary/test/2/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="js/jquery-1.7.1.min.js"></script>
+	<script src="js/script.js"></script>
     <script>
     jQuery(document).ready(function(){
         var container = $("#container");
