--- a/diary/test/2/index.html
+++ b/diary/test/2/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="ko">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<script src="js/jquery-1.7.1.min.js"></script>
-	<script src="js/script.js"></script>
-    <script>
-    jQuery(document).ready(function(){
-        var container = $("#container");
-		container.load('data/sub.html #wrapper')
-    });
-    </script>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<script src="js/jquery-1.7.1.min.js"></script>
+		<script src="js/script.js"></script>
+		<script>
+		    jQuery(document).ready(function(){
+			var container = $("#container");
+				container.load('data/sub.html #wrapper')
+		    });
+		 </script>
+	</head>
+	<body>
+
+	</body>
 </html>
