--- a/diary/test/2/index.html
+++ b/diary/test/2/index.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<script src="js/jquery-1.7.1.min.js"></script>
+		<style type="text/css" >
+			#container { border:1px solid black; padding:20px; margin:30px;  color:red; font-size:30px; }
+			#header { font-size:30px; color:red; }
+			#contents { color:blue; font-size:20px; }
+		</style>
+		<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 		<script src="js/script.js"></script>
 		<script>
 		    jQuery(document).ready(function(){
@@ -14,6 +18,8 @@
 		 </script>
 	</head>
 	<body>
-
+		<div id="container">
+			
+		</div>
 	</body>
 </html>
