--- a/diary/diary.html
+++ b/diary/diary.html
@@ -278,7 +278,7 @@
 					<li><a href="tooltip2.html">툴팁2</a></li>
 					<li><a href="dog.html">링크 들어가면 개 튀어나옴</a></li>
 					<li><a href="./test/1/index.html" target="_blank">JSON</a></li>
-					<li><a href="./test2/02_get_xml.html" target="_blank">AJAX</a></li>
+					<li><a href="./test/2/index.html" target="_blank">AJAX</a></li>
 					<li><a href="div_index.html">플러그인</a></li>
 					
 					
