--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                각 리스트 클릭하면 제작한 사이트에 대한 상세정보와 링크가 있는 모달창이 나오도록 제작했습니다.
                            </p>
                            
-                            <a href="http://leet1223.dothome.co.kr/" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                     <li>
@@ -260,7 +260,7 @@
                                사용자들이 재미를 느낄 수 있게 호버 이벤트 시 트랜지션과 트랜스포머 속성으로 이미지가
                                커지는 효과를 만들었습니다.
                            </p>
-                            <a href="http://leet1223.dothome.co.kr/movist/index.html" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/movist/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                      <li class="mr0">
@@ -323,7 +323,7 @@
                              <p class="info-con ">
                                  서브페이지 중 매장찾기 페이지는 카카오맵 api를 연동해 위치를 검색할 수 있도록 제작했습니다.
                              </p>
-                            <a href="http://leet1223.dothome.co.kr/toast/index.html" target="_blank">보러가기
+                            <a href="https://ltk-92.github.io/ltkpo/toast/index.html" target="_blank">보러가기
                             </a>
                         </div>
                      </li>
@@ -364,7 +364,7 @@
                                 동영상 페이지는 자바스크립트 배열로 유튜브와 네이버 플레이어의 동영상 주소를 나열하여, 화살표나
                                 이미지 탭 클릭시 기존 주소를 지우고 선택된 주소의 동영상이 중앙에 선택되도록 했습니다.
                             </p>
-                            <a href="http://leet1223.dothome.co.kr/dino/index.html" target="_blank">보러가기</a>         
+                            <a href="https://ltk-92.github.io/ltkpo/dino/index.html" target="_blank">보러가기</a>         
                         </div>
                     </li>
                     <li>
@@ -426,7 +426,7 @@
                             <p class="info-con">
                                 덕분에 오랫동안 안해본 코딩에 다시 익숙해질 수 있었습니다.
                             </p>
-                            <a href="http://leet1223.dothome.co.kr/sample/index.html" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/sample/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                      <li>
@@ -449,7 +449,7 @@
                             <p class="info-con">
                                 디자인을 바탕으로 어떻게 레이아웃을 짜고, 구조화하고, css를 입힐지, 이 페이지 연습을 통해 습득할 수 있었습니다.
                             </p>
-                            <a href="http://leet1223.dothome.co.kr/samsung/index.html" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/samsung/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                     <li>
@@ -491,7 +491,7 @@
                                transition 효과와 transform 속성으로
                                마우스 호버하면 모델 이미지가 줌인 되고, 반투명 화면과 함께 아이콘이 나오도록 만들었습니다.
                             </p>
-                            <a href="http://leet1223.dothome.co.kr/sony/index.html" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/sony/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                 </ul>
