--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                 플레이버튼을 누르면 모달페이지와 함께 유튜브 영상이 나오도록 제작했습니다.(본 동영상은 예제를 위해 다른 유튜버의 동영상을
                                 링크했습니다.)
                             </p>
-                            <a href="http://leet1223.dothome.co.kr/junho/index.html" target="_blank">보러가기</a>
+                            <a href="https://ltk-92.github.io/ltkpo/ljh/index.html" target="_blank">보러가기</a>
                         </div>
                     </li>
                     <li class="mr0">
