--- a/index.html
+++ b/index.html
@@ -59,40 +59,40 @@
         </header>
         <main id="main-wrap">
             <section id="visual-wrap">
-                <ul class="greeting-list">
-                    <li>H</li>
-                    <li>He</li>
-                    <li>Hel</li>
-                    <li>Hell</li>
-                    <li>Hello</li>
-                    <li>W</li>
-                    <li>We</li>
-                    <li>Wel</li>
-                    <li>Welc</li>
-                    <li>Welco</li>
-                    <li>Welcom</li>
-                    <li>Welcome</li>
-                    <li>Welcome T</li>
-                    <li>Welcome To</li>
-                    <li>Welcome To M</li>
-                    <li>Welcome To My</li>
-                    <li>Welcome To My A</li>
-                    <li>Welcome To My Al</li>
-                    <li>Welcome To My Alt</li>
-                    <li>Welcome To My Alte</li>
-                    <li>Welcome To My Alter</li>
-                    <li>Welcome To My Altern</li>
-                    <li>Welcome To My Alterna</li>
-                    <li>Welcome To My Alternat</li>
-                    <li>Welcome To My Alternate</li>
-                    <li>Welcome To My Alternate R</li>
-                    <li>Welcome To My Alternate Re</li>
-                    <li>Welcome To My Alternate Rea</li>
-                    <li>Welcome To My Alternate Real</li>
-                    <li>Welcome To My Alternate Reali</li>
-                    <li>Welcome To My Alternate Realit</li>
-                    <li>Welcome To My Alternate Reality</li>
-                </ul>
+            	<div class="greeting-list">
+                    <p>H</p>
+                    <p>He</p>
+                    <p>Hel</p>
+                    <p>Hell</p>
+                    <p>Hello</p>
+                    <p>W</p>
+                    <p>We</p>
+                    <p>Wel</p>
+                    <p>Welc</p>
+                    <p>Welco</p>
+                    <p>Welcom</p>
+                    <p>Welcome</p>
+                    <p>Welcome T</p>
+                    <p>Welcome To</p>
+                    <p>Welcome To M</p>
+                    <p>Welcome To My</p>
+                    <p>Welcome To My A</p>
+                    <p>Welcome To My Al</p>
+                    <p>Welcome To My Alt</p>
+                    <p>Welcome To My Alte</p>
+                    <p>Welcome To My Alter</p>
+                    <p>Welcome To My Altern</p>
+                    <p>Welcome To My Alterna</p>
+                    <p>Welcome To My Alternat</p>
+                    <p>Welcome To My Alternate</p>
+                    <p>Welcome To My Alternate R</p>
+                    <p>Welcome To My Alternate Re</p>
+                    <p>Welcome To My Alternate Rea</p>
+                    <p>Welcome To My Alternate Real</p>
+                    <p>Welcome To My Alternate Reali</p>
+                    <p>Welcome To My Alternate Realit</p>
+                    <p>Welcome To My Alternate Reality</p>
+                </div>
                 <p class="wheel-box">
                     <img src="img/mouse_wheel.png" alt="마우스휠 이미지">
                 </p>
