--- a/index.html
+++ b/index.html
@@ -139,17 +139,17 @@
                     <li>
                         <img src="img/html5.png" alt="html5 마크">
                         <p class="icon-title">html5</p>
-                        <p>전반적인 태그의 종류를 알며 웹표준에 적합한 구조를 만들 수 있습니다.</p>
+                        <p>전반적인 태그의 종류를 알며 웹접근성과 웹표준에 적합한 구조를 만들 수 있습니다.</p>
                     </li>
                     <li>
                         <img src="img/css3.png" alt="css3 마크">
                          <p class="icon-title">css3</p>
-                        <p>전반적인 css와 속성을 알며 외부,내부,내장형식의 연동방법을 알고 있습니다. </p>
+                        <p>전반적인 css와 속성을 알며 이를 홈페이지 제작에 잘 활용할 수 있습니다. </p>
                     </li>
                     <li>
                         <img src="img/js.png" alt="자바스크립트 마크">
                          <p class="icon-title">제이쿼리,자바스크립트</p>
-                        <p>제이쿼리의 기본 선택자, 기본 속성을 알고 있으며, 자바스크립트는 기본 연산자와 기본 수식정도 알고 있습니다.
+                        <p>자바스크립트와 제이쿼리의 기본 내용을 알고 활용할 수 있습니다.</p>
                         </li>
                 </ul>
                 </article>
