--- a/toast/signup.html
+++ b/toast/signup.html
@@ -214,6 +214,130 @@
                             </p>
                             <p>
                                 <strong>(*)</strong>
+                                <span class="alter-label">성별</span>
+                                <label class="usergender"><input type="radio" name="gender" value="남자" checked>남자</label>
+                                <label class="usergender"><input type="radio" name="gender" value="여자">여자</label>
+                            </p>
+                            <p>
+                                <strong>(*)</strong>
+                                <span class="alter-label">생일</span>
+                                <label class="cal-type"><input type="radio" name="cal-type" value="양력" checked>양력</label>
+                                <label class="cal-type"><input type="radio" name="cal-type" value="음력">음력</label>
+                                <select name="" id="useryear" class="userbirth">
+                                    <option value="1960">1960년</option>>
+                                    <option value="1961">1961년</option>
+                                    <option value="1962">1962년</option>
+                                    <option value="1963">1963년</option>
+                                    <option value="1964">1964년</option>
+                                    <option value="1965">1965년</option>
+                                    <option value="1966">1966년</option>
+                                    <option value="1967">1967년</option>
+                                    <option value="1968">1968년</option>
+                                    <option value="1969">1969년</option>
+                                    <option value="1970">1970년</option>
+                                    <option value="1971">1971년</option>
+                                    <option value="1972">1972년</option>
+                                    <option value="1973">1973년</option>
+                                    <option value="1974">1974년</option>
+                                    <option value="1975">1975년</option>
+                                    <option value="1976">1976년</option>
+                                    <option value="1977">1977년</option>
+                                    <option value="1978">1978년</option>
+                                    <option value="1979">1979년</option>
+                                    <option value="1980">1980년</option>
+                                    <option value="1981">1981년</option>
+                                    <option value="1982">1982년</option>
+                                    <option value="1983">1983년</option>
+                                    <option value="1984">1984년</option>
+                                    <option value="1985">1985년</option>
+                                    <option value="1986">1986년</option>
+                                    <option value="1987">1987년</option>
+                                    <option value="1988">1988년</option>
+                                    <option value="1989">1989년</option>
+                                    <option value="1990">1990년</option>
+                                    <option value="1991">1991년</option>
+                                    <option value="1992">1992년</option>
+                                    <option value="1993">1993년</option>
+                                    <option value="1994">1994년</option>
+                                    <option value="1995">1995년</option>
+                                    <option value="1996">1996년</option>
+                                    <option value="1997">1997년</option>
+                                    <option value="1998">1998년</option>
+                                    <option value="1999">1999년</option>
+                                    <option value="2000">2000년</option>
+                                    <option value="2001">2001년</option>
+                                    <option value="2002">2002년</option>
+                                    <option value="2003">2003년</option>
+                                    <option value="2004">2004년</option>
+                                    <option value="2005">2005년</option>
+                                    <option value="2006">2006년</option>
+                                    <option value="2007">2007년</option>
+                                    <option value="2008">2008년</option>
+                                    <option value="2009">2009년</option>
+                                    <option value="2010">2010년</option>
+                                    <option value="2011">2011년</option>
+                                    <option value="2012">2012년</option>
+                                    <option value="2013">2013년</option>
+                                    <option value="2014">2014년</option>
+                                    <option value="2015">2015년</option>
+                                    <option value="2016">2016년</option>
+                                    <option value="2017">2017년</option>
+                                    <option value="2018">2018년</option>
+                                    <option value="2019">2019년</option>
+                                    <option value="2020">2020년</option>
+                                    
+                                </select>
+                                <select name="" id="usermonth" class="userbirth">
+                                    <option value="01">1월</option>
+                                    <option value="02">2월</option>
+                                    <option value="03">3월</option>
+                                    <option value="04">4월</option>
+                                    <option value="05">5월</option>
+                                    <option value="06">6월</option>
+                                    <option value="07">7월</option>
+                                    <option value="08">8월</option>
+                                    <option value="09">9월</option>
+                                    <option value="09">9월</option>
+                                    <option value="10">10월</option>
+                                    <option value="11">11월</option>
+                                    <option value="12">12월</option>
+                                </select>
+                                <select name="" id="userday" class="userbirth">
+                                    <option value="01">1일</option>
+                                    <option value="02">2일</option>
+                                    <option value="03">3일</option>
+                                    <option value="04">4일</option>
+                                    <option value="05">5일</option>
+                                    <option value="06">6일</option>
+                                    <option value="07">7일</option>
+                                    <option value="08">8일</option>
+                                    <option value="09">9일</option>
+                                    <option value="10">10일</option>
+                                    <option value="11">11일</option>
+                                    <option value="12">12일</option>
+                                    <option value="13">13일</option>
+                                    <option value="14">14일</option>
+                                    <option value="15">15일</option>
+                                    <option value="16">16일</option>
+                                    <option value="17">17일</option>
+                                    <option value="18">18일</option>
+                                    <option value="19">19일</option>
+                                    <option value="20">20일</option>
+                                    <option value="21">21일</option>
+                                    <option value="22">22일</option>
+                                    <option value="23">23일</option>
+                                    <option value="24">24일</option>
+                                    <option value="25">25일</option>
+                                    <option value="26">26일</option>
+                                    <option value="27">27일</option>
+                                    <option value="28">28일</option>
+                                    <option value="29">29일</option>
+                                    <option value="30">30일</option>
+                                    <option value="31">31일</option>
+                                </select>
+                            </p>
+                            <p> 
+                                <strong>(*)</strong>
                                 <label for="userid" placeholder="아이디는 8자이상">아이디</label>
                                 <input type="text" name="userid" id="userid"/>
                                 <input type="button" value="중복확인"id="id-btn" class="green-btn"/>
