--- a/toast/event.html
+++ b/toast/event.html
@@ -51,8 +51,8 @@
            
            <div id="top">
                <ul>
-                   <li><a href="#">로그인</a></li>
-                   <li><a href="#">회원가입</a></li>
+                   <li><a href="./login.html">로그인</a></li>
+                   <li><a href="./signup.html">회원가입</a></li>
                    <li><a href="#">점주의방</a></li>
                </ul>
            </div>
