--- a/toast/event.html
+++ b/toast/event.html
@@ -82,7 +82,7 @@
                                    <li><a href="./brand-story.html">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
-                                   <li><a href="#">언론에서 본 석봉토스트</a></li>
+                                   <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
                                    <li><a href="./road.html">오시는 길</a></li>
                                </ul>
 
@@ -203,9 +203,7 @@
                     <h2 class="sub-title">이벤트</h2>
                 </article>
            </section>
-           <section class="sub-content">
-               
-           </section>
+    
            <section class="sub-content">
                <article class='sub-content-con'>
                    <ul class="tab-bar cook-bar">
@@ -282,7 +280,7 @@
                     <dd><a href="./brand-story.html">석봉토스트 소개</a></dd>
                     <dd><a href="#">석봉토스트 비전</a></dd>
                     <dd><a href="#">석봉토스트 연혁</a></dd>
-                    <dd><a href="#">언론에서 본  석봉토스트</a></dd>
+                    <dd><a href="./article.html">언론에서 본  석봉토스트</a></dd>
                     <dd><a href="./road.html">오시는 길</a></dd>
                 </dl>
                  <dl>
