--- a/toast/index.html
+++ b/toast/index.html
@@ -168,7 +168,7 @@
                                    <li><a href="./brand-story.html">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
-                                   <li><a href="#">언론에서 본 석봉토스트</a></li>
+                                   <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
                                    <li><a href="./road.html">오시는 길</a></li>
                                </ul>
                             <ul>
@@ -218,9 +218,9 @@
 					<a href="./brand-story.html">석봉토스트</a>
 					<ul class="gnb_m_sub">
 							<li><a href="./brand-story.html">석봉토스트 소개</a></li>
-							<li><a href="http://www.naver.com">석봉토스트 비전</a></li>
-							<li><a href="http://www.naver.com">석봉토스트 연혁</a></li>
-							<li><a href="http://www.naver.com">언론에서 본 석봉토스트</a></li>
+							<li><a href="">석봉토스트 비전</a></li>
+							<li><a href="">석봉토스트 연혁</a></li>
+							<li><a href="./article.html">언론에서 본 석봉토스트</a></li>
 							<li><a href="./road.html">오시는 길</a></li>
 
 						</ul>
