--- a/toast/menu-drink.html
+++ b/toast/menu-drink.html
@@ -79,7 +79,7 @@
                                    <li><a href="./brand-story.html">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
-                                   <li><a href="#">언론에서 본 석봉토스트</a></li>
+                                   <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
                                    <li><a href="./road.html">오시는 길</a></li>
                                </ul>
 
@@ -133,7 +133,7 @@
 							<li><a href="./brand-story.html">석봉토스트 소개</a></li>
 							<li><a href="http://www.naver.com">석봉토스트 비전</a></li>
 							<li><a href="http://www.naver.com">석봉토스트 연혁</a></li>
-							<li><a href="http://www.naver.com">언론에서 본 석봉토스트</a></li>
+							<li><a href="./article.html">언론에서 본 석봉토스트</a></li>
 							<li><a href="./road.html">>오시는 길</a></li>
 
 						</ul>
@@ -372,7 +372,7 @@
                     <dd><a href="./brand-story.html">석봉토스트 소개</a></dd>
                     <dd><a href="#">석봉토스트 비전</a></dd>
                     <dd><a href="#">석봉토스트 연혁</a></dd>
-                    <dd><a href="#">언론에서 본  석봉토스트</a></dd>
+                    <dd><a href="./article.html">언론에서 본  석봉토스트</a></dd>
                     <dd><a href="./road.html">오시는 길</a></dd>
                 </dl>
                  <dl>
