--- a/toast/consult.html
+++ b/toast/consult.html
@@ -80,7 +80,7 @@
                                    <li><a href="#">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
-                                   <li><a href="#">언론에서 본 석봉토스트</a></li>
+                                   <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
                                    <li><a href="./road.html">오시는 길</a></li>
                                </ul>
 
@@ -134,7 +134,7 @@
 							<li><a href="./brand-story.html">석봉토스트 소개</a></li>
 							<li><a href="#">석봉토스트 비전</a></li>
 							<li><a href="#">석봉토스트 연혁</a></li>
-							<li><a href="#">언론에서 본 석봉토스트</a></li>
+							<li><a href="./article.html">언론에서 본 석봉토스트</a></li>
 							<li><a href="./road.html">오시는 길</a></li>
 						</ul>
 				</li>
@@ -290,7 +290,7 @@
                     <dd><a href="#">석봉토스트 소개</a></dd>
                     <dd><a href="#">석봉토스트 비전</a></dd>
                     <dd><a href="#">석봉토스트 연혁</a></dd>
-                    <dd><a href="#">언론에서 본  석봉토스트</a></dd>
+                    <dd><a href="./article.html">언론에서 본  석봉토스트</a></dd>
                     <dd><a href="#">오시는 길</a></dd>
                 </dl>
                 <dl>
