--- a/toast/signup.html
+++ b/toast/signup.html
@@ -83,7 +83,7 @@
                                    <li><a href="./brand-story.html">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
-                                   <li><a href="#">언론에서 본 석봉토스트</a></li>
+                                   <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
                                    <li><a href="./road.html">오시는 길</a></li>
                                </ul>
 
@@ -137,7 +137,7 @@
 							<li><a href="./brand-story.html">석봉토스트 소개</a></li>
 							<li><a href="http://www.naver.com">석봉토스트 비전</a></li>
 							<li><a href="http://www.naver.com">석봉토스트 연혁</a></li>
-							<li><a href="http://www.naver.com">언론에서 본 석봉토스트</a></li>
+							<li><a href="./article.html">언론에서 본 석봉토스트</a></li>
 							<li><a href="./road.html">오시는 길</a></li>
 
 						</ul>
@@ -409,7 +409,7 @@
                     <dd><a href="./brand-story.html">석봉토스트 소개</a></dd>
                     <dd><a href="#">석봉토스트 비전</a></dd>
                     <dd><a href="#">석봉토스트 연혁</a></dd>
-                    <dd><a href="#">언론에서 본  석봉토스트</a></dd>
+                    <dd><a href="./article.html">언론에서 본  석봉토스트</a></dd>
                     <dd><a href="./road.html">오시는 길</a></dd>
                 </dl>
                  <dl>
