--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
                                                 회원가입
                                              </a>
                                          </td>
+                                          <td>
+                                             <a href="https://ltk-92.github.io/ltkpo/toast/article.html" target="_blank">
+                                                언론보도
+                                             </a>
+                                         </td>
                                      </tr>
                                  </table>
                              </div>             
