--- a/toast/map.html
+++ b/toast/map.html
@@ -203,7 +203,7 @@
                     키워드 : <input type="text" value="석봉토스트" id="keyword" > 
                     <button type="submit">검색하기</button>
                     <button type="button" class="default-button">
-                   처음으로
+                   돌아가기
                </button> 
                 </form>
                  
