--- a/toast/map.html
+++ b/toast/map.html
@@ -202,9 +202,7 @@
                 <form onsubmit="searchPlaces(); return false;">
                     키워드 : <input type="text" value="석봉토스트" id="keyword" > 
                     <button type="submit">검색하기</button>
-                    <button type="button" class="default-button">
-                   처음으로
-               </button> 
+                    <button type="button" class="default-button">처음</button> 
                 </form>
                  
             </div>
@@ -332,7 +330,7 @@ function displayPlaces(places) {
 
             };
             $(".default-button").click(function(){
-                $("#keyword").text("석봉토스트");
+                $("#keyword").defaultValue.;
                 $("#keyword").submit();
             });
         })(marker, places[i].place_name);
