--- a/toast/map.html
+++ b/toast/map.html
@@ -330,7 +330,7 @@ function displayPlaces(places) {
 
             };
             $(".default-button").click(function(){
-                $("#keyword").defaultValue.;
+                $("#keyword").defaultValue;
                 $("#keyword").submit();
             });
         })(marker, places[i].place_name);
