--- a/toast/consult.html
+++ b/toast/consult.html
@@ -77,7 +77,7 @@
                       <div id="all_listCenter" class="clearfix">
                           <div class="all_list_set">
                               <ul>
-                                   <li><a href="#">석봉토스트 소개</a></li>
+                                   <li><a href="./brandstory.html">석봉토스트 소개</a></li>
                                    <li><a href="#">석봉토스트 비전</a></li>
                                    <li><a href="#">석봉토스트 연혁</a></li>
                                    <li><a href="./article.html">언론에서 본 석봉토스트</a></li>
@@ -94,7 +94,7 @@
 
                             <ul>
                                 <li><a href="#">신규오픈매장</a></li>
-                                <li><a href="#">우리동네 매장찾기</a></li>
+                                <li><a href="./map.html">우리동네 매장찾기</a></li>
                                 <li><a href="#">Best Store</a></li>
                             </ul>
 
@@ -102,12 +102,12 @@
                                 <li><a href="#">창업조건</a></li>
                                 <li><a href="#">인테리어 안내</a></li>
                                 <li><a href="#">매장사진</a></li>
-                                <li><a href="#">온라인 상담신청</a></li>
+                                <li><a href="./consult.hyml">온라인 상담신청</a></li>
                                 <li><a href="#">e카탈로그</a></li>
                             </ul>
 
                             <ul>
-                               <li><a href="#">진행중인 이벤트</a></li>
+                               <li><a href="./event.html">진행중인 이벤트</a></li>
                            </ul>
 
                             <ul>
