--- a/index.html
+++ b/index.html
@@ -250,8 +250,14 @@
                               <p class="info-con info-title">
                                    석봉토스트
                               </p> 
+                             <div class="info-con ">
+                                <img src="img/toast-response.png" alt="석봉토스트 모바일페이지">
+                             </div> 
                              <p class="info-con">
-                                 포트폴리오 목적으로 제작한 사이트입니다. 모바일 반응형이 가능하도록 제작했습니다.
+                                 포트폴리오 목적으로 제작한 사이트입니다.
+                             </p>
+                              <p class="info-con info-margin">
+                                 우선 태블릿과 모바일 환경애서도 이용할 수 있도록 반응형이 가능하도록 제작했습니다. 모바일 환경에서는 레이아웃의 높이를 110vw로 지정하여 세로 스크롤링에 최적화했습니다.
                              </p>
                              <p class="info-con">
                                  인지도가 없는 브랜드이기 때문에, 이용자들이 브랜드 정보를 먼저 알 수 있도록 음식메뉴와 장소 그리고 브랜드 소개, 언론보도 컨텐츠를 
@@ -259,13 +265,7 @@
                              </p>
                              <p class="info-con info-margin">
                                  기업의 이미지와 친숙한 모양인 토스트를 형상화한 레이아웃을 넣었습니다.
-                             </p>
-                             <div class="info-con mobile-box">
-                                <img src="img/toast-mobile.png" alt="석봉토스트 모바일페이지">
-                            </div>
-                            <p class="info-con info-margin">
-                                 모바일 환경에서는 레이아웃의 높이를 110vw로 지정하여 세로 스크롤링에 최적화했습니다.
-                             </p>
+                              </p>
                              <div class="info-con">
                                     <img src="img/toast-visual.jpg" alt="석봉토스트 홈페이지 메인 비주얼">
                              </div>
