--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -86,7 +86,7 @@
 <!–//제목 가리는 div–>
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bugHt670SCg" frameborder="0" style="width:1920px;height:1080px;"allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bugHt670SCg" frameborder="0" style="width:1920px;height:1080px;"allow="accelerometer; autoplay=1&mute=1 clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="item">
            <img src="img/bg2.jpg" alt="First slide">
