--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                              </p>
 			     <div class="info-con">
                                     <img src="img/before_sukbong.jpg" alt="리뉴얼 전 석봉토스트 홈페이지">
-                             </div class="info-con>
+                             </div>
 			      <p class="info-con info-margin">
 				    플래시로 디자인된 기존의 석봉토스트 사이트를 요즘 스타일에 맞는 해상도와 디자인으로 리뉴얼 해봤습니다. 
 			      </p>  
