--- a/index.html
+++ b/index.html
@@ -250,9 +250,6 @@
                               <p class="info-con info-title">
                                    석봉토스트
                               </p> 
-                             <div class="info-con ">
-                                <img src="img/toast-response.png" alt="석봉토스트 모바일페이지">
-                             </div> 
                              <p class="info-con">
                                  포트폴리오 목적으로 제작한 사이트입니다.
                              </p>
@@ -261,7 +258,10 @@
                              </div>
 			      <p class="info-con info-margin">
 				    플래시로 디자인된 기존의 석봉토스트 사이트를 요즘 스타일에 맞는 해상도와 디자인으로 리뉴얼 해봤습니다. 
-			      </p>  
+			      </p>
+			      <div class="info-con ">
+                                <img src="img/toast-response.png" alt="석봉토스트 반응형페이지">
+                              </div>   
                               <p class="info-con info-margin">
                                  우선 태블릿과 모바일 환경애서도 이용할 수 있도록 반응형이 가능하도록 제작했습니다. 모바일 환경에서는 레이아웃의 높이를 110vw로 지정하여 세로 스크롤링에 최적화했습니다.
                              </p>
