--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     </tr>
                                     <tr>
                                          <td colspan="4">
-                                             <a href="https://ltk-92.github.io/ltkpo/diary/diaty.html" target="_blank" class="main-btn">
+                                             <a href="https://ltk-92.github.io/ltkpo/diary/diary.html" target="_blank" class="main-btn">
                                                 다이어리 페이지 바로가기
                                              </a>
                                         </td>
