--- a/index.html
+++ b/index.html
@@ -468,12 +468,15 @@
                            <p class="info-con info-title info-margin">
                                영화 웹진 무비스트
                            </p>
+			   <div class="info-con">
+                               <img src="img/movist-original.jpg" alt="무비스트 원래 페이지">
+                           </div>		 
                            <div class="info-con">
                                <img src="img/movist-response.jpg" alt="무비스트 반응형">
                            </div>
-                           <p class="info-con">
+			   <p class="info-con">
                                포트폴리오 목적으로 제작한 사이트입니다. 사용자가 개봉영화 확인 - 순위 확인 및 예매 - 평점 확인 - 이벤트 -관련기사를 읽도록 레이아웃을 배치했습니다.
-                           </p>
+                           </p>	
                            <p class="info-con info-margin">세로 gnb 형태의 사이트도 구현하고 싶어 데스크톱은 두가지 형태로 만들었습니다. 그래서 데스크톱1,2, 태블릿, 모바일 형태로
                                4단계의 반응형 형태로 제작했습니다. </p>
                 
