--- a/index.html
+++ b/index.html
@@ -469,13 +469,16 @@
                                영화 웹진 무비스트
                            </p>
 			   <div class="info-con">
-                               <img src="img/movist-original.jpg" alt="무비스트 원래 페이지">
-                           </div>		 
+                               <img src="img/movist-original.png" alt="무비스트 원래 페이지">
+                           </div>
+			   <p class="info-con">
+                               기존의 사이트는 테이블 태그로 코딩한 레이아웃과 낮은 해상도 비율, 메인컨텐츠로서 떨어지는 투표메뉴가 중앙에 배치되어 있었습니다. 
+                           </p>		
                            <div class="info-con">
                                <img src="img/movist-response.jpg" alt="무비스트 반응형">
                            </div>
 			   <p class="info-con">
-                               포트폴리오 목적으로 제작한 사이트입니다. 사용자가 개봉영화 확인 - 순위 확인 및 예매 - 평점 확인 - 이벤트 -관련기사를 읽도록 레이아웃을 배치했습니다.
+                               그래서 리뉴얼 버전에서는 사시멘틱한 코딩과 높은 해상도 비율 그리고 보다 사용자가 찾을만한 구성으로 개봉영화 확인 - 순위 확인 및 예매 - 평점 확인 - 이벤트 -관련기사를 읽도록 레이아웃을 배치했습니다.
                            </p>	
                            <p class="info-con info-margin">세로 gnb 형태의 사이트도 구현하고 싶어 데스크톱은 두가지 형태로 만들었습니다. 그래서 데스크톱1,2, 태블릿, 모바일 형태로
                                4단계의 반응형 형태로 제작했습니다. </p>
