--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>이태규 포트폴리오 입니다.</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="./img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/response.css" type="text/css">
@@ -227,7 +244,7 @@
                                     </tr>
                                     <tr>
                                          <td colspan="4">
-                                             <a href="https://ltk-92.github.io/ltkpo/diary/diary.html" target="_blank" class="main-btn">
+                                             <a href="https://ltk-92.github.io/ltkpo/diary/diaty.html" target="_blank" class="main-btn">
                                                 다이어리 페이지 바로가기
                                              </a>
                                         </td>
@@ -250,18 +267,12 @@
                               <p class="info-con info-title">
                                    석봉토스트
                               </p> 
+                             <div class="info-con ">
+                                <img src="img/toast-response.png" alt="석봉토스트 모바일페이지">
+                             </div> 
                              <p class="info-con">
                                  포트폴리오 목적으로 제작한 사이트입니다.
                              </p>
-			     <div class="info-con">
-                                    <img src="img/before_sukbong.jpg" alt="리뉴얼 전 석봉토스트 홈페이지">
-                             </div>
-			      <p class="info-con info-margin">
-				    플래시로 디자인된 기존의 석봉토스트 사이트를 요즘 스타일에 맞는 해상도와 디자인으로 리뉴얼 해봤습니다. 
-			      </p>
-			      <div class="info-con ">
-                                <img src="img/toast-response.png" alt="석봉토스트 반응형페이지">
-                              </div>   
                               <p class="info-con info-margin">
                                  우선 태블릿과 모바일 환경애서도 이용할 수 있도록 반응형이 가능하도록 제작했습니다. 모바일 환경에서는 레이아웃의 높이를 110vw로 지정하여 세로 스크롤링에 최적화했습니다.
                              </p>
@@ -468,18 +479,12 @@
                            <p class="info-con info-title info-margin">
                                영화 웹진 무비스트
                            </p>
-			   <div class="info-con">
-                               <img src="img/movist-original.png" alt="무비스트 원래 페이지">
-                           </div>
-			   <p class="info-con">
-                               기존의 사이트는 테이블 태그로 코딩한 레이아웃과 낮은 해상도 비율, 메인컨텐츠로서 떨어지는 투표메뉴가 중앙에 배치되어 있었습니다. 
-                           </p>		
                            <div class="info-con">
                                <img src="img/movist-response.jpg" alt="무비스트 반응형">
                            </div>
-			   <p class="info-con">
-                               그래서 리뉴얼 버전에서는 사시멘틱한 코딩과 높은 해상도 비율 그리고 보다 사용자가 찾을만한 구성으로 개봉영화 확인 - 순위 확인 및 예매 - 평점 확인 - 이벤트 -관련기사를 읽도록 레이아웃을 배치했습니다.
-                           </p>	
+                           <p class="info-con">
+                               포트폴리오 목적으로 제작한 사이트입니다. 사용자가 개봉영화 확인 - 순위 확인 및 예매 - 평점 확인 - 이벤트 -관련기사를 읽도록 레이아웃을 배치했습니다.
+                           </p>
                            <p class="info-con info-margin">세로 gnb 형태의 사이트도 구현하고 싶어 데스크톱은 두가지 형태로 만들었습니다. 그래서 데스크톱1,2, 태블릿, 모바일 형태로
                                4단계의 반응형 형태로 제작했습니다. </p>
                 
