--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <img src="img/mouse_wheel.png" alt="마우스휠 이미지">
                 </p>
             </section>
-            <section id="icon-wrap">
+            <section id="profile-wrap">
                <article>
                         <div class="profile-img">
                             <img src="img/profile-img.jpg" alt="프로필 사진">
@@ -150,7 +150,7 @@
                         </div>
                     </article>
             </section>
-            <section id="profile-wrap">
+            <section id="icon-wrap">
                 <article>
                         <ul class="icon-list">
                     <li>
@@ -167,7 +167,12 @@
                         <img src="img/js.png" alt="자바스크립트 마크">
                          <p class="icon-title">제이쿼리,자바스크립트</p>
                         <p>자바스크립트와 제이쿼리의 기본 내용을 알고 활용할 수 있습니다.</p>
-                        </li>
+                    </li>
+                    <li>
+                        <img src="img/svn.png" alt="svn 마크">
+                            <p class="icon-title">SVN</p>
+                        <p>자바스크립트와 제이쿼리의 기본 내용을 알고 활용할 수 있습니다.</p>
+                    </li>
                 </ul>
                 </article>
             </section>
